--- a/MICB425_Project1.Rmd
+++ b/MICB425_Project1.Rmd
@@ -93,3 +93,25 @@ ASV_Vectors <- unlist(ASV_List, use.names=FALSE)
 ASV_Subsets <- ASV_DF %>% filter(ASV %in% ASV_Vectors)
 
 ```
+
+
+```{r}
+mothur %>% 
+  subset_taxa(Genus==“Planctomyces”) %>% 
+  tax_glom(taxrank = ‘Genus’) %>%
+  psmelt() %>%
+  
+  lm(Abundance ~ Depth_m, .) %>% 
+  summary()
+
+mothur %>% 
+  subset_taxa(Genus==“Planctomyces”) %>% 
+  psmelt() %>% 
+  group_by(Sample) %>% 
+  summarize(Abundance_sum=sum(Abundance), Depth_m=mean(Depth_m)) %>% 
+  
+ggplot() +
+  geom_point(aes(x=Depth_m, y=Abundance_sum)) +
+  geom_smooth(method=‘lm’, aes(x=as.numeric(Depth_m), y=Abundance_sum)) +
+  labs(title=“Abundance of Plantomyces across depth”)
+```
