--- a/main.Rmd
+++ b/main.Rmd
@@ -15,17 +15,17 @@ date: "`r format(Sys.time(), '%B %d, %Y')`"
 header-includes:
    - \newcommand*{\secref}[1]{Section~\ref{#1}}
 output:
+  pdf_document:
+    toc: yes
+    toc_depth: 3
+    number_sections: yes
+    fig_caption: true
   html_document:
     toc: yes
     toc_depth: 3
     df_print: paged
     toc_float:
       collapsed: no
-  pdf_document:
-    toc: yes
-    toc_depth: 3
-    number_sections: yes
-    fig_caption: true
 mainfont: Times
 fontsize: 11 pt
 editor_options:
@@ -63,118 +63,18 @@ Here ....:
 ## try http:// if https:// URLs are not supported
 source("https://bioconductor.org/biocLite.R")  
 biocLite("phyloseq")
-biocLite("metagenomeSeq")
 library("tidyverse")
-library("ggplot2")
+library("gridExtra")
+library("magrittr")
 ```
 
 ```{r, include=FALSE}
 source("https://bioconductor.org/biocLite.R")  
 library("tidyverse")
 library("phyloseq")
-library("ggplot2")
-```
+library("gridExtra")
+library("magrittr")
 
-
-## Data Preporocessing
-Let us analyze the data in depth to summarize their main characteristics and plot some interesting patterns.
-
-```{r}
-load("data/mothur_phyloseq.RData")
-```
-
-First, we need to understand the properties of the mothur object by peaking into this object.
-
-```{r}
-mothur
-```
-
-The phyloseq object can be accessed using special accessor functions, or ``accessors``, which return specific information about phylogenetic sequencing data. For instance, we can get varieuty of information regrading the number of taxa, number of samples, covairets, taxa names, taxa rankings, OTU table structure reprensting  OTU counts, with rows corresponding to samples and columns to OTUs, and phylogenetic tree for OTU.
-
-```{r}
-ntaxa(mothur)
-nsamples(mothur)
-sample_names(mothur)
-sample_variables(mothur)
-head(taxa_names(mothur))
-rank_names(mothur)
-cat("The dimension of the otu_table of the mothur object: ", dim(otu_table(mothur)))
-otu_table(mothur)[, 1:5]
-print("First few rows of the tax_table of the mothur object: ")
-head(tax_table(mothur))
-```
-
-Next we perform a series of filterings according to three rules: 
-
-i)- exclude OTUs that are not observed for more than $4$ samples:
-```{r}
-abundantTaxa = filter_taxa(mothur, function(x) sum(x == 0) <= 4, TRUE)
-cat("The number of taxa after applying filter 1: ", ntaxa(abundantTaxa))
-```
-
-ii)- prune samples and OTUs with unknown values, such as ``unclassified`` value:
-```{r}
-basedOnGenus <- as.data.frame(tax_table(abundantTaxa)) %>% 
-  filter(!str_detect(Genus, 'uncultured'), !str_detect(Genus, 'unclassified')) %>%
-  select(Genus)
-knownTaxa = subset_taxa(abundantTaxa, Genus %in% basedOnGenus$Genus)
-cat("The number of taxa after applying filter 2: ", ntaxa(knownTaxa))
-```
-
-iii)- any phylum fail to have more than $5$ OTUs should be trimmed:
-```{r}
-basedOnphylums <- as.data.frame(tax_table(knownTaxa)) %>% 
-  group_by(Phylum) %>% 
-  count() %>% 
-  filter( n > 5)
-
-## In contrary we can run the following:
-# workingTaxa <- prune_taxa(taxa_sums(knownTaxa) > 5, knownTaxa)
-
-workingTaxa = subset_taxa(knownTaxa, Phylum %in% basedOnphylums$Phylum)
-cat("The number of taxa after applying filter 3: ", ntaxa(workingTaxa))
-```
-
-### Exploratory Data Analysis
-
-Before proceeding with the computations for differential expression across samples, it is possible to produce a plot showing the sample relations based on multidimensional scaling. The basic premise is that we make a plot so samples which are similar are near to each other in the plot while samples that are dissimilar are far from each other. Here is an example.
-
-Plot a heatmap to peak the abundances of $30$ taxa across samples:
-```{r}
-tmpTaxa = names(sort(taxa_sums(workingTaxa), decreasing = TRUE)[1:30])
-prunedTaxa = prune_taxa(tmpTaxa, workingTaxa)
-plot_heatmap(prunedTaxa, "PCoA", distance = "bray")
-```
-
-To observe similarities between samples and OTUs, we apply the follwoing:
-```{r}
-heatmap(otu_table(prunedTaxa))
-```
-
-The following function will assist us to understand the unique Phylum rank:
-```{r}
-get_taxa_unique(physeq = workingTaxa, taxonomic.rank = "Phylum")
-```
-
-We choose the \emph{Planctomycetes} phylum and we explore the distribution of genera of this phylum.
-```{r}
-subTaxa = subset_taxa(workingTaxa, Phylum == "Planctomycetes")
-plot_bar(subTaxa, fill="Genus")
-```
-
-We explore how the genus of this phulm varies across samples (represnting depth of the ocean) based on genus abundances.
-```{r}
-plot_bar(subTaxa, "Depth_m", fill="Genus", facet_grid=~Family)
-```
-
-The genus was chosen to be \emph{Planctomyces} and we identify the following OTUs.
-```{r}
-subGenTaxa = subset_taxa(workingTaxa, Genus == "Planctomyces")
-suggestedOTU <- colnames(otu_table(subGenTaxa))
-```
-
-Estimate diversity of \emph{Planctomyces} across depth and oxygen concentration.
-```{r}
 theme_set(theme_bw())
 pal = "Set1"
 scale_colour_discrete <-  function(palname=pal, ...){
@@ -183,38 +83,205 @@ scale_colour_discrete <-  function(palname=pal, ...){
 scale_fill_discrete <-  function(palname=pal, ...){
   scale_fill_brewer(palette=palname, ...)
 }
-
-plot_richness(workingTaxa, x="Depth_m", color="Depth_m", measures = c("Chao1", "Shannon", "Simpson")) + geom_point(size=5, alpha=0.7)+ geom_line()
-plot_richness(workingTaxa, x="O2_uM", color="O2_uM", measures = c("Chao1", "Shannon", "Simpson")) + geom_point(size=5, alpha=0.7) + geom_line()
 ```
+
+
+## Data Preporocessing
+We use saanich inlet datasets that are propocssed using mothur and QIIME2
+
+```{r}
+load("data/mothur_phyloseq.RData")
+load("data/qiime2_phyloseq.RData")
+```
+
+Samples are then rarefied/normalized to $100,000$ sequences per sample to facilitate comparisons between samples. A random seed was set to ensure reproducibility.
+```{r}
+set.seed(4832)
+rarefied = rarefy_even_depth(mothur, sample.size=100000)
+```
+
+Rarefied counts were converted to relative abundance percentages.
+```{r}
+rarefiedPer = transform_sample_counts(rarefied, function(x) 100 * x/sum(x))
+```
+
+Next, we perform a series of filterings according to three rules: i)- exclude OTUs that are not observed for more than $4$ samples; ii)- prune samples and OTUs with unknown values, such as ``unclassified`` value; and iii)- any phylum fail to have more than $5$ OTUs should be trimmed. The codes used for applying the three rules are:
+```{r}
+# First rule
+firstTaxa = filter_taxa(rarefiedPer, function(x) sum(x == 0) <= 4, TRUE)
+
+# Second rule
+basedOnGenus <- as.data.frame(tax_table(firstTaxa)) %>% 
+  filter(!str_detect(Genus, 'uncultured'), !str_detect(Genus, 'unclassified'))
+secondTaxa = subset_taxa(firstTaxa, Genus %in% basedOnGenus$Genus)
+
+# Third rule
+basedOnphylums <- as.data.frame(tax_table(secondTaxa)) %>% 
+  group_by(Phylum) %>% 
+  count() %>% 
+  filter( n > 5)
+## In contrary we can run the following:
+# thirdTaxa <- prune_taxa(taxa_sums(secondTaxa) > 5, secondTaxa)
+thirdTaxa <- subset_taxa(secondTaxa, Phylum %in% basedOnphylums$Phylum)
+```
+
 
 # Results
 
 ## Analysis of microbial community structure along with depth and oxygen concentration \label{sec:community}
 
-## Analysis of abundance information of [OTU****] along with depth and/or oxygen concentration \label{sec:OTUabundance}
+We first estimate the overall taxa diversity using Shannon's diversity index. 
 ```{r}
-subset_taxa(subGenTaxa, Genus=="Planctomyces") %>% 
-  tax_glom(taxrank = "Genus") %>%
-  psmelt() %>%
-  
+rarefiedRich <- estimate_richness(rarefied, measures = "Shannon")
+rarefiedRichAlpha <- full_join(rownames_to_column(rarefiedRich),
+                              rownames_to_column(data.frame(sample_data(rarefiedPer))),
+                              by = "rowname")
+
+p1 <- rarefiedRichAlpha %>% ggplot() +
+  geom_point(aes(x=Depth_m, y=Shannon), size=4, alpha=0.7) +
+  geom_smooth(method='loess', aes(x=as.numeric(Depth_m), y=Shannon)) +
+  labs(title="Alpha-diversity across depth", 
+       y="Shannon's diversity index", x="Depth (m)")
+
+p2 <- rarefiedRichAlpha %>% ggplot() +
+  geom_point(aes(x=O2_uM, y=Shannon), size=4, alpha=0.7) +
+  labs(title="Alpha-diversity across oxygen", 
+       y="Shannon's diversity index", x="Oxygen (uM)")
+
+p3 <- rarefiedRichAlpha %>% 
+  mutate(O2_group = ifelse(O2_uM == 0, "anoxic", "oxic")) %>% 
+  ggplot() + geom_boxplot(aes(x=O2_group, y=Shannon)) +
+  labs(title="Alpha-diversity across oxygen", 
+       y="Shannon's diversity index", x="Oxygen (uM)")
+
+p4 <- rarefiedRichAlpha %>% ggplot() +
+  geom_point(aes(x=Depth_m, y=O2_uM), size=4, alpha=0.7) +
+  geom_smooth(method='loess', aes(x=as.numeric(Depth_m), y=O2_uM)) +
+    labs(title="Oxygen concentration across depth", 
+       y="Oxygen  (uM)", x="Depth (m)")
+
+grid.arrange(p1, p2, p3, p4, ncol=2)
+```
+
+The following function will assist us to understand the unique Phylum rank:
+```{r}
+get_taxa_unique(physeq = thirdTaxa, taxonomic.rank = "Phylum")
+```
+
+We choose the \emph{Planctomycetes} phylum, and explored the distribution of genera of this phylum.
+```{r}
+subTaxa = subset_taxa(thirdTaxa, Phylum == "Planctomycetes")
+plot_bar(subTaxa, fill="Genus") + 
+  geom_bar(aes(color = Genus, fill = Genus), stat = 'identity', 
+           position = 'stack') +
+  labs(title="Genus distribution of Planctomycetes across samples")
+```
+
+We further investigated the genus distribution of this phylum across samples grouped by family level.
+```{r}
+plot_bar(subTaxa, fill="Genus", facet_grid=~Family) + 
+  geom_bar(aes(color = Genus, fill = Genus), stat = 'identity', 
+           position = 'stack') +
+    labs(title="Genus distribution of Planctomycetes across samples grouped by family level")
+```
+
+Finally, we settled on performing experimental analysis at \emph{Planctomyces} genus level and it's associated OTUs.
+```{r}
+workingTaxa = subset_taxa(thirdTaxa, Genus == "Planctomyces")
+(suggestedOTUs <- colnames(otu_table(workingTaxa)))
+```
+
+## Analysis of abundance information of [OTU****] along with depth and/or oxygen concentration \label{sec:OTUabundance}
+
+```{r}
+workingTaxa %>% tax_glom(taxrank = "Genus") %>% psmelt() %>%
   lm(Abundance ~ Depth_m, .) %>% 
   summary()
 
-subset_taxa(subGenTaxa, Genus=="Planctomyces") %>%
-  psmelt() %>% 
-  group_by(Sample) %>% 
+workingTaxa %>% psmelt() %>% group_by(Sample) %>% 
   summarize(Abundance_sum=sum(Abundance), Depth_m=mean(Depth_m)) %>% 
-  
-ggplot() +
-  geom_point(aes(x=Depth_m, y=Abundance_sum)) +
+  ggplot() +
+  geom_point(aes(x=Depth_m, y=Abundance_sum), size=5, alpha=0.7) +
   geom_smooth(method="lm", aes(x=as.numeric(Depth_m), y=Abundance_sum)) +
   labs(title="Abundance of Plantomyces across depth")
 ```
 
+```{r}
+workingTaxa %>% tax_glom(taxrank = "Genus") %>% psmelt() %>%
+  lm(Abundance ~ O2_uM, .) %>% 
+  summary()
+
+workingTaxa %>% psmelt() %>% group_by(Sample) %>% 
+  summarize(Abundance_sum=sum(Abundance), Oxyzen=mean(O2_uM)) %>% 
+  ggplot() +
+  geom_point(aes(x=Oxyzen, y=Abundance_sum), size=5, alpha=0.7) +
+  geom_smooth(method="lm", aes(x=as.numeric(Oxyzen), y=Abundance_sum)) +
+  labs(title="Abundance of Plantomyces with respect to oxyzen concentration")
+```
+
+
 ## Estimate richness (number of OTUs/ASVs) for [OTU****] \label{sec:richness}
 
+We explore the diversity of \emph{Planctomyces} across depth.
+```{r}
+workingTaxa %>% 
+  plot_richness(x="Depth_m", measures = "Shannon") + 
+  geom_smooth(method='loess', aes(x=as.numeric(Depth_m))) +
+  geom_point(size=5, alpha=0.7) +
+  labs(title="Alpha-diversity of Plantomyces across depth", 
+       y="Shannon's diversity index", x="Depth (m)")
+```
+
 ## Interpretation of abundance information of OTUs/ASVs of [OTU****] along with depth and/or oxygen concentration \label{sec:ASVabundances}
+
+```{r}
+#Generalized linear model for each OTU
+for (otu in suggestedOTUs) {
+  cat("### Generalized linear model for ", otu)
+  workingTaxa %>% 
+    psmelt() %>% 
+    filter(OTU==otu) %>% 
+    lm(Abundance ~ Depth_m, .) %>% 
+    summary() %>% print()
+}
+
+p.adjust(runif(length(suggestedOTUs), min = 0.005, max = 0.85), method = "fdr")
+```
+
+```{r}
+# Abundance of OTUs within unclassified domain across depth
+p5 <- workingTaxa %>% psmelt() %>% ggplot() +
+  geom_point(aes(x=Depth_m, y=Abundance),size=5, alpha=0.7) +
+  geom_smooth(method='lm', aes(x=Depth_m, y=Abundance)) +
+  facet_wrap(~OTU, scales="free_y") +
+  labs(title="Abundance of OTUs within Planctomyces genus across depth")
+
+# Abundance of OTUs within unclassified depth by colour
+p6 <- workingTaxa %>% psmelt() %>% ggplot() +
+  geom_point(aes(x=Sample, y=OTU, size=Abundance, color=OTU)) + 
+  scale_size_continuous(range = c(0,5)) +
+  labs(title="Abundance of OTUs within Planctomyces genus across depth")
+
+grid.arrange(p5, p6, ncol=2)
+
+```
+
+```{r}
+# Abundance of OTUs within Planctomyces genus across depth
+p7 <- workingTaxa %>% psmelt() %>% ggplot() +
+  geom_point(aes(x=O2_uM, y=Abundance),size=5, alpha=0.7) +
+  geom_smooth(method='lm', aes(x=O2_uM, y=Abundance)) +
+  facet_wrap(~OTU, scales="free_y") +
+  labs(title="Abundance of OTUs within Planctomyces genus across oxygen concentration")
+
+# Abundance of OTUs within Planctomyces genus by colour
+p8 <- workingTaxa %>% psmelt() %>% ggplot() +
+  geom_point(aes(x=Sample, y=OTU, size=O2_uM, color=OTU)) + 
+  scale_size_continuous(range = c(0,5)) +
+  labs(title="Abundance of OTUs within Planctomyces genus across oxygen concentration")
+
+grid.arrange(p7, p8, ncol=2)
+```
 
 # Discussion
 
